--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
         <h1>Paleta de Cores</h1>
     </header>
 
+    <main>
+        <div id='color-palette'>
+            <div class='row'>
+                <div class='color'></div>
+                <div class='color'></div>
+                <div class='color'></div>
+                <div class='color'></div>
+            </div>
+        </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
