--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1 id='title'>Paleta de Cores</h1>
+    </header>
     <main>
-        <h1>Paleta de Cores</h1>
         <div id='color-palette'>
             <div class='row'>
                 <div class='color'></div>
