implementa requisito 4: adiciona quadro de pixels

--- a/index.html
+++ b/index.html
@@ -12,12 +12,51 @@
 <body>
 	<h1 id='title'>Paleta de Cores</h1>
 	<div id='color-palette'>
-		<div class='row'>
+		<div class='row-palette'>
 			<div class='color'></div>
 			<div class='color'></div>
 			<div class='color'></div>
 			<div class='color'></div>
 		</div>
+	</div>
+
+	<div id='pixel-board'>
+		<div class='row-board'>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+		</div>
+		<div class='row-board'>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+		</div>
+		<div class='row-board'>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+		</div>
+		<div class='row-board'>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+		</div>
+		<div class='row-board'>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+			<div class='pixel'></div>
+		</div>
+		
 	</div>
 
 	<script src="script.js"></script>
