--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 		</div>
 	</div>
 
+	<button id="clear-board">Limpar</button>
+
 	<div id='pixel-board'>
 		<div class='row-board'>
 			<div class='pixel'></div>
