--- a/index.html
+++ b/index.html
@@ -22,44 +22,13 @@
 
 	<button id="clear-board">Limpar</button>
 
-	<div id='pixel-board'>
-		<div class='row-board'>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-		</div>
-		<div class='row-board'>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-		</div>
-		<div class='row-board'>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-		</div>
-		<div class='row-board'>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-		</div>
-		<div class='row-board'>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-			<div class='pixel'></div>
-		</div>
-		
+	<div id='pixel-board'></div>
+
 	</div>
+
+	<label for='quantity'>Tamanho da largura e altura (entre 5 e 50):</label>
+	<input type='number' id='quantity' name='quantity' min='5' max='50'>
+	<button id='btn-size-board'>Aplicar</button>
 
 	<script src="script.js"></script>
 </body>
