--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<button id="clear-board">Limpar</button>
 
-	<input type='number' id='board-size' name='quantity' min='5' max='50'>
+	<input type='number' id='board-size' min='1' max='50'>
 	<button id='generate-board'>VQV</button>
 
 	<div id='pixel-board'></div>
