--- a/index.html
+++ b/index.html
@@ -10,24 +10,25 @@
 </head>
 
 <body>
-	<h1 id='title'>Paleta de Cores</h1>
-	<div id='color-palette'>
-		<div class='row-palette'>
-			<div class='color'></div>
-			<div class='color'></div>
-			<div class='color'></div>
-			<div class='color'></div>
+	<header>
+		<h1 id='title'>Paleta de Cores</h1>
+	</header>
+	<main>
+		<div id='color-palette'>
+			<div class='row-palette'>
+				<div class='color'></div>
+				<div class='color'></div>
+				<div class='color'></div>
+				<div class='color'></div>
+			</div>
 		</div>
-	</div>
 
-	<button id="clear-board">Limpar</button>
+		<input type='number' id='board-size' min='1' max='50'>
+		<button id='generate-board'>VQV</button>
+		<button id="clear-board">Limpar</button>
 
-	<input type='number' id='board-size' min='1' max='50'>
-	<button id='generate-board'>VQV</button>
-
-	<div id='pixel-board'></div>
-
-	</div>
+		<table id='pixel-board'></table>
+	</main>
 
 	<script src="script.js"></script>
 </body>
