refatora html: retira declaração de linhas

--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
 		<h1 id='title'>Paleta de Cores</h1>
 	</header>
 	<main>
-		<div id='color-palette'>
-			<div class='row-palette'>
-				<div class='color'></div>
-				<div class='color'></div>
-				<div class='color'></div>
-				<div class='color'></div>
-			</div>
-		</div>
+		<div id='color-palette'></div>
 
 		<input type='number' id='board-size' min='1' max='50'>
 		<button id='generate-board'>VQV</button>
