--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 <html lang="pt-br">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Projeto Pixels art</title>
-	<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projeto Pixels art</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<header>
-		<h1 id='title'>Paleta de Cores</h1>
-	</header>
-	<main>
-		<div id='color-palette'></div>
+  <header>
+    <h1 id='title' class='center'>Paleta de Cores</h1>
+  </header>
+  <main>
+    <section class='center'>
+      <div id='color-palette'></div>
 
-		<input type='number' id='board-size' min='1' max='50'>
-		<button id='generate-board'>VQV</button>
-		<button id="clear-board">Limpar</button>
+      <input type='number' id='board-size' min='1' max='50'>
+      <button id='generate-board'>VQV</button>
+      <button id="clear-board">Limpar</button>
 
-		<table id='pixel-board'></table>
-	</main>
+      <table id='pixel-board'></table>
+    </section>
 
-	<script src="script.js"></script>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
